--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/dossie30/Liri-Node-App/issues"
   },
-  "homepage": "https://github.com/dossie30/Liri-Node-App#readme"
+  "homepage": "https://github.com/dossie30/Liri-Node-App#readme",
+  "dependencies": {
+    "dotenv": "^6.0.0",
+    "node-spotify-api": "^1.0.7",
+    "request": "^2.87.0",
+    "twitter": "^1.7.1"
+  }
 }
